syntax = "proto3";

option go_package = "/proto";


// The greeting service definition.
service Permission {
  // Sends a greeting
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse) {}
}

// The request message containing the user's name.
message ValidateTokenRequest {
  string token = 1;
}

// The response message containing the greetings
message ValidateTokenResponse {
  bool isValid = 1;
}